syntax = "proto3";

package kubeconfig;
option go_package = "github.com/kapycluster/kapyserver/types/proto/kubeconfig";

service KubeConfigService {
    rpc GetKubeConfig(GetKubeConfigRequest) returns (GetKubeConfigResponse);
}

message GetKubeConfigRequest{}

message GetKubeConfigResponse{
    string kubeConfig = 1;
    string metadata = 2;
}
